init 16  update  sbt 2.0.0,plugins.sbt